# crm-assistant

./: .cursorignore  .cursorrules  .gitignore  AgentConfig.json  COMPANY_INTELLIGENCE_README.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  STRUCTURE.md  WORKING_DEMO_SUMMARY.md  ai_agent_demo.py  architecture.md  company_intelligence_demo.py  crm_assistant.py  demo_competitor_enrichment.py  demo_llm_enrichment.py  docker-compose.dev.yml  docker-compose.yml  interactive_agent.py  production_agent_example.py  pyproject.toml  quick_test.py  requirements.txt  run_agent.py  run_simple_agent.py  smoke_test.py  targeted_enrichment.py  test_agent.py  test_agent_with_tools.py  test_company_intelligence.py  test_gemini_search.py  test_louisville_competitor.py  test_louisville_llm_enrichment.py  test_mcp_tools.py  test_simple_agent.py  test_simple_agent_direct.py  web_search_agent.py
.cursor/rules/: conda.mdc
.github/workflows/: ci.yml
crm_agent/: README.md  __init__.py  a2a_wrapper.py  agent.py  coordinator.py  coordinator_main.py  main.py
crm_agent/a2a/: __main__.py  agent.py  (+5 more)
crm_fastmcp_server/: __init__.py  __main__.py  server.py  stdio_server.py
demos/: README.md  __init__.py  houston_national_demo.py  houston_national_final.py  houston_national_gemini_research.py  houston_national_research.py  houston_national_web_enrichment.py  simple_company_test.py
docs/: AGENT_CAPABILITIES.md  BUSINESS_RULES_SYSTEM.md  COMPANY_MANAGEMENT_AGENT_README.md  CRM_AGENT_SYSTEM_FINAL.md  CRM_CLEANUP.md  CRM_CONVERSION.md  CRM_ENRICHMENT.md  CRM_README.md  FASTMCP_STRATEGY.md  FIELD_ENRICHMENT_SYSTEM_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  JIRA_ASSISTANT_ARCHITECTURE.md  Jira-AI-Requests.md  MULTI_AGENT_ARCHITECTURE.md  PROJECT_MANAGER_AGENT_README.md  SWOOP_FIELD_ENRICHMENT_VALIDATION.md  USAGE_EXAMPLES.md  a2a_framework_strategy.md  architectural_improvements.md  codebase_recommendations.md  companies_field_profiles.json  contacts_field_profiles.json  courses_under_management.json  development_roadmap.md  jira_ai_requests.jsonl
examples/: crm_cleanup_demo.py  data_quality_main.py  usage_examples.py
jira_agent/: __init__.py  coordinator_main.py
jira_fastmcp_server/: README.md  __main__.py  server.py  tools.py
mcp_toolbox/: README.md  __init__.py  __main__.py  local_client.py  main.py  server.py  simple_test.py  verify_server.py
mcp_wrapper/: simple_hubspot_server.py
project_manager_agent/: CRITIQUE_SYSTEM_README.md  __init__.py  agent.py  chat_interface.py  coordinator.py  demo_critique_system.py  hubspot_coordinator.py  interactive_coordinator.py  main.py
rules/: auto_continue_phases.md
scripts/: __init__.py  config_based_enrichment.py  crm_assistant.py  field_mapping_validator.py  hubspot_safe_connector.py  targeted_enrichment.py  update_mansion_ridge_direct.py
tests/: README.md  __init__.py  test_available_tools.py  test_company_management_comprehensive.py  test_critique_integration.py  test_crm_cleanup.py  test_crm_system.py  test_cross_creek_specific.py  test_deprecated_wrapper.py  test_enhanced_system.py  test_phase1_provenance.py
tests_and_demos/: enhanced_contact_enrichment.py  interactive_agent.py  iterative_enrichment_improver.py
yaml_agent/: __init__.py  agent.py  agent.yaml  mcp_bridge.py  root_agent.yaml
(+122 files in other folders)
